# server-info-fetcher

./: Cargo.toml  output.json
src/: args.rs  fetch.rs  main.rs
